--- a/AngleNet2/package.json
+++ b/AngleNet2/package.json
@@ -24,11 +24,11 @@
     "angular2-router-loader": "0.3.5",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^3.0.1",
-    "aspnet-webpack": "^2.0.1",
+    "aspnet-webpack": "^2.0.3",
     "awesome-typescript-loader": "3.2.1",
     "bootstrap": "3.3.7",
     "chai": "4.0.2",
-    "css": "2.2.1",
+    "css": "^2.2.3",
     "css-loader": "0.28.4",
     "es6-shim": "0.35.3",
     "event-source-polyfill": "0.0.9",
