--- a/AngleNet2/package.json
+++ b/AngleNet2/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "AngleNet2",
+  "name": "AngleNet",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.5",
   "scripts": {
     "test": "karma start ClientApp/test/karma.conf.js"
   },
