Mode environment fun....

--- a/AngleNet2/package.json
+++ b/AngleNet2/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "AngleNet",
+  "name": "anglenet",
   "private": true,
   "version": "0.0.5",
   "scripts": {
-    "test": "karma start ClientApp/test/karma.conf.js"
+    "test": "karma start ClientApp/test/karma.conf.js",
+    "build": "webpack"
   },
   "devDependencies": {
     "@angular/animations": "4.2.5",
@@ -54,8 +55,9 @@
     "to-string-loader": "1.1.5",
     "typescript": "2.4.1",
     "url-loader": "0.5.9",
-    "webpack": "2.5.1",
-    "webpack-hot-middleware": "2.18.2",
+    "webpack": "^2.5.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "4.1.0",
     "zone.js": "0.8.12"
   }
